--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 langs==0.1.1
-pyrogram==1.1.13
+Pyrogram==1.1.13
 pyromod==1.5
+PySocks==1.7.1
 PyYAML==5.4.1
 rich==9.12.0
+TgCrypto==1.2.2
+typing-extensions==3.7.4.3
 
 git+https://github.com/aioanilist/aioanilist
