--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 aioschedule==0.5.2
+humanize==3.5.0
 langs==0.1.1
-Pyrogram>=1.2.3,<1.3.0
+Pyrogram>=1.2.9,<1.3.0
 pyromod==1.5
 python-rapidjson==1.0
 PySocks==1.7.1
 PyYAML==5.4.1
+psutil==5.8.0
 rich==9.12.0
 TgCrypto==1.2.2
 tortoise-orm==0.16.21
