utils: filters: don't answer to commands from other bots

--- a/amime/config.py.example
+++ b/amime/config.py.example
@@ -16,3 +16,4 @@ CHATS: Dict = {
     "staff": 0,
 }
 SUDO_USERS: List[int] = [1155717290, 918317361, 705707638]  # @AndrielFR, @Hitalo and @VegaZS
+PREFIXES: List[str] = ["!", "/"] # Like !start or /start
