--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ ffmpeg-python==0.2.0
 humanize==3.5.0
 langs==0.1.1
 meval==2.5
+pendulum==2.1.2
 Pyrogram>=1.2.9,<1.3.0
 pyromod==1.5
 python-rapidjson==1.0
