--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,9 @@ updates:
       include: "scope"
     ignore:
       - dependency-name: "pyrogram"
+      - dependency-name: "httpx"
     labels:
-      - "pip dependencies"
+      - "pip"
+      - "dependencies"
     pull-request-branch-name:
       separator: "/"
