--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aioschedule==0.5.2
 httpx[http2]==0.17.1
 humanize==3.5.0
 langs==0.1.1
+loguru==0.5.3
 meval==2.5
 pendulum==2.1.2
 Pyrogram>=1.2.9,<1.3.0
@@ -10,7 +11,6 @@ python-rapidjson==1.0
 PySocks==1.7.1
 PyYAML==5.4.1
 psutil==5.8.0
-rich==10.1.0
 TgCrypto==1.2.2
 tortoise-orm==0.17.2
 typing-extensions==3.10.0.0
