--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ humanize==3.5.0
 langs==0.1.1
 meval==2.5
 pendulum==2.1.2
-Pyrogram>=1.2.9,<1.3.0
 pyromod==1.5
 python-rapidjson==1.0
 PySocks==1.7.1
@@ -15,4 +14,5 @@ TgCrypto==1.2.2
 tortoise-orm==0.17.2
 typing-extensions==3.10.0.0
 
+git+https://github.com/pyrogram/pyrogram
 git+https://github.com/AmanoTeam/python-anilist
