manga: add nhentai on inline
* Try your luck.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ PyYAML==5.4.1
 psutil==5.8.0
 TgCrypto==1.2.2
 tortoise-orm==0.17.2
+telegraph==1.4.1
 typing-extensions==3.10.0.0
 
 git+https://github.com/pyrogram/pyrogram
